<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BilleteraVirtual</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="already_have_account_string">Ya tiene cuenta?</string>
    <string name="crear_cuenta_nueva_string">Crear cuenta nueva</string>
    <string name="the_best_way_to_tran_string">El lugar mas seguro para tu dinero</string>
    <string name="alkewallet_string">AlkeWallet</string>
    <string name="splash_screen">splash_screen</string>

    <string name="primary_color">Primary color</string>
    <string name="secondary_color">Secondary color</string>

    <string name="there_s_no_transacti_string">No hay transacciones registradas!</string>
    <string name="last_transactions_string">Ultimas transacciones</string>
    <string name="request_money_string">Ingresar Dinero</string>
    <string name="send_money_string">Enviar Dinero</string>
    <string name="__124_57_string">$124.57</string>
    <string name="total_balance_string">Balance Total</string>
    <string name="hi__amanda__string">Hola, Amanda!</string>
    <string name="dashboard_string">Inicio</string>
    <string name="shape_ek3">shape_ek3</string>
    <string name="shape_ek2">shape_ek2</string>
    <string name="shape_ek1" tools:ignore="Typos">shape_ek1</string>
    <string name="path_ek12">path_ek12</string>
    <string name="path_ek11" tools:ignore="Typos">path_ek11</string>
    <string name="path_ek10">path_ek10</string>
    <string name="path_ek9">path_ek9</string>
    <string name="profile_picture">profile_picture</string>
    <string name="path_ek8">path_ek8</string>
    <string name="shape">shape</string>
    <string name="path_ek7">path_ek7</string>
    <string name="path_ek6">path_ek6</string>
    <string name="path_ek5">path_ek5</string>
    <string name="path_ek4">path_ek4</string>
    <string name="path_ek3">path_ek3</string>
    <string name="path_ek2">path_ek2</string>
    <string name="path_ek1" tools:ignore="Typos">path_ek1</string>
    <string name="path">path</string>
    <string name="create_new_account_string">Crear una nueva cuenta</string>
    <string name="login_string">Login</string>
    <string name="enter_your_password_string">Ingresar tu contraseña</string>
    <string name="password_ek2_string">Contraseña</string>
    <string name="forget_password__string">Olvidaste tu contraseña?</string>
    <string name="enter_your_email_string">Ingresar tu email</string>
    <string name="email_ek2_string">Email</string>
    <string name="login_and_start_tran_string">Logea y empeza a tranferir!</string>

	<string name="create_account_string">Crear Cuenta</string>
	<string name="enter_your_password_ek2_string">Reingresar contraseña</string>
	<string name="enter_your_name_string">Ingresar nombre</string>
	<string name="enter_your_lastname_string">Ingresar apellido</string>
	<string name="name_string">Nombre</string>
	<string name="apellido_string">Apellido</string>
	<string name="signup_and_start_tra_string">Registrarse y empezar a transferir</string>

	<string name="help_center_ek2_string">Crentro de ayuda</string>
	<string name="settings_ek2_string">Opciones</string>
	<string name="my_cards_ek2_string">Mis tarjetas</string>
	<string name="my_info_ek2_string">Mi Informacion</string>
	<string name="hisham_zayadnh_string">Amanda Alkemy</string>
	<string name="h_string">H</string>
	<string name="my_profile_string">Mi perfil</string>

    <string name="send_payment_string">Enviar Dinero</string>
    <string name="add_payment_note_string">Agregar notas de transferencia(opcional)</string>
    <string name="payment_note_ek2_string">Notas de transferncia</string>
    <string name="_12_50_string">12.50</string>
    <string name="payment_amount_ek2_string">Cantidad a transferir</string>
    <string name="yara_khalil_gmail_co_string">yara_khalil@gmail.com</string>
    <string name="yara_khalil_string">Yara Khalil</string>
    <string name="y_string">Y</string>

	<string name="request_payment_string">Ingresar Dinero</string>
	<string name="_20_00_string">20.00</string>
	<string name="payment_amount_in_string">Cantidad a ingresar</string>
	<string name="reem_1993_gmail_com_string">reem_1993@gmail.com</string>
	<string name="reem_khaled_string">Reem Khaled</string>

</resources>